Add new features and improve existing commands for the Skyblock server
Introduce new commands like `/baltop` and `/sell hand`, enhance existing commands like `/ah` and `/shop` with new functionalities, and fix various bugs across the server.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: e8a06aa7-3465-42e9-a318-ad15bbb51d0d
Replit-Commit-Checkpoint-Type: full_checkpoint
Replit-Commit-Event-Id: d07e7792-cbd6-4543-b92c-69ef99a3073a
Replit-Helium-Checkpoint-Created: true